--- a/src/assets/scss/_blog.scss
+++ b/src/assets/scss/_blog.scss
@@ -67,7 +67,11 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    margin-bottom: var(--space-xl-2xl);
+
+    @media all and (min-width: 1023px) {
+        margin-bottom: var(--space-xl-2xl);
+
+    }
 
     .card__cover {
         flex: 3 1 400px;
